Add appendix LinAlg.

--- a/qiskit-textbook/content/ch-appendix/linear_algebra.summary.ipynb
+++ b/qiskit-textbook/content/ch-appendix/linear_algebra.summary.ipynb
@@ -4120,10 +4120,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "The surface of this sphere, along with the inner product between qubit state vectors, is a valid Hilbert space. In addition, the normalization condition holds true, as the radius of the Bloch sphere is $1$, and thus the length squared of each vector must also equal $1$.\n",
+    "he surface of this sphere, along with the inner product between qubit state vectors, is a valid Hilbert space. In addition, the normalization condition holds true, as the radius of the Bloch sphere is $1$, and thus the length squared of each vector must also equal $1$.\n",
     "\n",
     "A final note regarding Hilbert spaces and the inner product is their relationship to **unitary matrices**. Unitary matrices are important in quantum computation because they **preserve the inner product**, meaning that no matter how you transform a vector under a sequence of unitary matrices, the normalization condition still holds true. This can be demonstrated in the following short proof:\n",
     "\n",
@@ -4135,8 +4133,13 @@
     "\n",
     "<br>\n",
     "\n",
-    "This means that unitary evolution sends quantum states to other valid quantum states. For a single-qubit Hilbert space, represented by the Bloch sphere, unitary transformations correspond to rotations of state vectors to different points on the sphere, not changing the length of the state vector in any way.\n",
-    "\n",
+    "This means that unitary evolution sends quantum states to other valid quantum states. For a single-qubit Hilbert space, represented by the Bloch sphere, unitary transformations correspond to rotations of state vectors to different points on the sphere, not changing the length of the state vector in any way."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
     "### Outer Products and Tensor Products\n",
     "\n",
     "Inner products aren't the only way to multiply vectors. Occasionally, we'll switch the order of the bra and ket in order to take the **outer product,** whose outcome is a matrix, rather than a single number. For two vectors $|a\\rangle$ and $|b\\rangle$ in a Hilbert space, we denote the outer product as $| a \\rangle$$\\langle b |$, where $\\langle b |$ is equal to the conjugate transpose of $|b\\rangle$, as before. This gets us:\n",
@@ -4185,16 +4188,24 @@
     "\n",
     "<br>\n",
     "\n",
-    "You can find examples of the tensor product in action [here.](https://qiskit.org/textbook/ch-gates/multiple-qubits-entangled-states.html#1.-Representing-Multi-Qubit-States-)\n",
-    "\n",
-    "\n",
+    "You can find examples of the tensor product in action [here.](https://qiskit.org/textbook/ch-gates/multiple-qubits-entangled-states.html#1.-Representing-Multi-Qubit-States-)\n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
     "### Eigenvectors and Eigenvalues\n",
     "\n",
     "Consider the relationship of the form:\n",
     "\n",
     "$$A |v\\rangle \\ = \\ \\lambda |v\\rangle,$$\n",
     "\n",
-    "where $A$ is a matrix, and $\\lambda$ is some number. If we are given some matrix $A$, and need to find the vectors $|v\\rangle$ and numbers $\\lambda$ that satisfy this relationship, we call these vectors **eigenvectors**, and their corresponding number multipliers **eigenvalues**. Eigenvectors and eigenvalues have very important physical significance in the context of quantum mechanics, and therefore quantum computation. Given some $A$, we exploit an interesting trick in order to find the set of eigenvectors and corresponding eigenvalues. Let us rearrange our equation as:\n",
+    "where $A$ is a matrix, and $\\lambda$ is some number. If we are given some matrix $A$, and need to find the vectors $|v\\rangle$ and numbers $\\lambda$ that satisfy this relationship, we call these vectors **eigenvectors**, and their corresponding number multipliers **eigenvalues**. Eigenvectors and eigenvalues have very important physical significance in the context of quantum mechanics, and therefore quantum computation. \n",
+    "\n",
+    "`It is a general principle of Quantum Mechanics that there is an operator for every physical observable. A physical observable is anything that can be measured. If the wavefunction that describes a system is an eigenfunction of an operator, then the value of the associated observable is extracted from the eigenfunction by operating on the eigenfunction with the appropriate operator. The value of the observable for the system is the eigenvalue, and the system is said to be in an eigenstate.`\n",
+    "\n",
+    "Given some $A$, we exploit an interesting trick in order to find the set of eigenvectors and corresponding eigenvalues. Let us rearrange our equation as:\n",
     "\n",
     "<br>\n",
     "\n",
@@ -4250,16 +4261,28 @@
     "\n",
     "<br>\n",
     "\n",
-    "This time, $b$ can be any number, and $a$ is $0$; thus, our basis vector (and our eigenvector corresponding to $-1$) is $\\begin{pmatrix} 0 \\\\ 1 \\end{pmatrix}$. Notice how the eigenvectors of the Pauli-Z matrix are the quantum computational basis states $|0\\rangle$ and $|1\\rangle$. This is no coincidence. For instance, when we measure a qubit in the $Z$-basis, we are referring to a measurement that collapses the qubit's state into one of the eigenvectors of the Z matrix, either $|0\\rangle$ or $|1\\rangle$.\n",
+    "This time, $b$ can be any number, and $a$ is $0$; thus, our basis vector (and our eigenvector corresponding to $-1$) is $\\begin{pmatrix} 0 \\\\ 1 \\end{pmatrix}$. \n",
+    "\n",
+    "Notice how the eigenvectors of the Pauli-Z matrix are the quantum computational basis states $|0\\rangle$ and $|1\\rangle$. This is no coincidence. For instance, when we measure a qubit in the $Z$-basis, we are referring to a measurement that collapses the qubit's state into one of the eigenvectors of the Z matrix, either $|0\\rangle$ or $|1\\rangle$.\n",
+    "\n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "### Matrix Exponentials\n",
     "\n",
     "\n",
     "The notion of a matrix exponential is a very specific yet extremely important concept. We often see unitary transformations in the form:\n",
     "\n",
-    "<br>\n",
     "$$U \\ = \\ e^{i\\gamma H},$$\n",
-    "<br>\n",
     "\n",
     "where $H$ is some Hermitian matrix and $\\gamma$ is some real number. It is fairly simple to prove that all matrices of this form are unitary. Taking the conjugate transpose of $U$, we get:\n",
     "\n",
@@ -4273,15 +4296,11 @@
     "\n",
     "But since $H$ is Hermitian, we know that $H^{\\dagger} \\ = \\ H$, thus:\n",
     "\n",
-    "<br>\n",
-    "\n",
     "\n",
     "$$e^{-i \\gamma H^{\\dagger}} \\ = \\ e^{-i \\gamma H} \\ \\Rightarrow \\ U^{\\dagger} U \\ = \\ e^{-i \\gamma H} e^{i\\gamma H} \\ = \\ \\mathbb{I}$$\n",
     "\n",
     "\n",
-    "<br>\n",
-    "\n",
-    "You may wonder why a matrix inside of an exponential can still be considered a matrix.  The answer becomes clearer when we expand our exponential function as a Taylor series. Recall from calculus that a Taylor series is essentially a way to write any function as an infinite-degree polynomial, and the main idea is to choose the terms of the polynomial and center it at some point $x_0$ lying on the function we are trying to transform into the polynomial, such that the zeroth, first, second, third, etc. derivative is the same for both the original function and the polynomial. Thus, we write our Taylor series in the form:\n",
+    "**You may wonder why a matrix inside of an exponential can still be considered a matrix**.  The answer becomes clearer when we **expand our exponential function as a Taylor series**. Recall from calculus that a Taylor series is essentially **a way to write any function as an infinite-degree polynomial**, and the main idea is to choose the terms of the polynomial and center it at some point $x_0$ lying on the function we are trying to transform into the polynomial, such that the zeroth, first, second, third, etc. derivative is the same for both the original function and the polynomial. Thus, we write our Taylor series in the form:\n",
     "\n",
     "<br>\n",
     "$$g(x) \\ = \\ \\displaystyle\\sum_{n \\ = \\ 0}^{\\infty} \\ f^{(n)}(x_0) \\ \\frac{(x \\ - \\ x_0)^n}{n!},$$\n",
@@ -4318,7 +4337,11 @@
     "<br>\n",
     "\n",
     "Therefore, the exponential of a matrix is a matrix. It is an infinite sum of powers of matrices, which admittedly looks overly complex...but the point here is that the matrix exponential is indeed a matrix. \n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "source": [
     "We are now in a position to demonstrate a very important fact: if we have some matrix $B$ such that $B^2 \\ = \\ \\mathbb{I}$ (this is called an **involutory matrix**), then:\n",
     "\n",
     "<br>\n",
@@ -4329,7 +4352,7 @@
     "\n",
     "<br>\n",
     "\n",
-    "We start with the Maclaurin series:\n",
+    "We start with the Maclaurin series (= Maclaurin series are a type of series expansion in which all terms are nonnegative integer powers of the variable):\n",
     "\n",
     "<br>\n",
     "\n",
@@ -4426,7 +4449,13 @@
     "\n",
     "\n",
     "<br>\n",
-    "\n",
+    "\n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
     "This fact is extremely useful in quantum computation. Consider the Pauli matrices:\n",
     "\n",
     "<br>\n",
@@ -4449,7 +4478,11 @@
     "\n",
     "<br>\n",
     "\n",
-    "These matrices are among the fundamental \"quantum gates\" used to manipulate qubits. These operations are not only unitary, they are also **Hermitian** and **Involutory**. This means that a matrix of the form $e^{i \\gamma \\sigma_k} \\ k \\ \\in \\ \\{x, \\ y, \\ z\\}$ is not only a valid unitary matrix that can act upon a quantum state vector (a qubit), but it can be expressed using the sine-cosine relationship that we just proved. This is very powerful, and is seen throughout quantum computational theory, as gates of this type are used all the time.\n",
+    "**These matrices are among the fundamental \"quantum gates\" used to manipulate qubits.** \n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "These operations are not only unitary, they are also **Hermitian** and **Involutory** ($B^2 \\ = \\ \\mathbb{I}$). This means that a matrix of the form $e^{i \\gamma \\sigma_k} \\ k \\ \\in \\ \\{x, \\ y, \\ z\\}$ is not only a valid unitary matrix that can act upon a quantum state vector (a qubit), but it can be expressed using the sine-cosine relationship that we just proved. This is very powerful, and is seen throughout quantum computational theory, as gates of this type are used all the time.\n",
     "\n",
     "One last important fact about matrix exponentials: if we have some matrix $M$, with eigenvectors $|v\\rangle$ and corresponding eigenvalues $\\lambda$, then:\n",
     "\n",
@@ -4474,7 +4507,9 @@
     "This fact is also very useful. When creating quantum circuits that simulate a certain Hamiltonian (especially for variational circuits), we frequently use gates of the form $e^{i \\gamma \\sigma_z}$. Since $|0\\rangle$ and $|1\\rangle$ are eigenvectors of $\\sigma_z$, we can easily determine mathematically that $e^{i \\gamma \\sigma_z}$ will add a phase of $e^{i \\gamma}$ to $|0\\rangle$, and will add a phase of $e^{-i\\gamma}$ to $|1\\rangle$. We can then construct this gate in terms of $CNOT$ and phase/rotation gates fairly easily, as we know the mathematical outcome of the gate on each of the computational basis states.\n",
     "\n",
     "This fact doesn't only apply to exponentials of the $\\sigma_z$ gate. For example, we can determine the outcome of a gate of the form $e^{i \\gamma \\sigma_x}$ on the eigenvectors of $\\sigma_x$, $(|0\\rangle \\ + \\ |1\\rangle)/\\sqrt{2}$ and $(|0\\rangle \\ - \\ |1\\rangle)/\\sqrt{2}$. The same applies to exponentials of the $\\sigma_y$ matrix."
-   ]
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
