--- a/qiskit-textbook/content/ch01-states/02_code.ipynb
+++ b/qiskit-textbook/content/ch01-states/02_code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "official-syntax",
+   "id": "sweet-roulette",
    "metadata": {},
    "source": [
     "# Representing Quibit States\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "directed-copying",
+   "id": "still-workplace",
    "metadata": {},
    "source": [
     "In quantum computers, our basic variable is the qubit: a quantum variant of the bit. These have exactly the same restrictions as normal bits do: they can store only a single binary piece of information, and can only ever give us an output of 0 or 1. However, they can also be manipulated in ways that can only be described by quantum mechanics. This gives us new gates to play with, allowing us to find new ways to design algorithms."
@@ -20,8 +20,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "together-wealth",
+   "execution_count": 1,
+   "id": "similar-syntax",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,8 +32,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "forbidden-belle",
+   "execution_count": 2,
+   "id": "integrated-trick",
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +43,7 @@
        "<Figure size 73.326x84.28 with 1 Axes>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -58,8 +58,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "direct-piano",
+   "execution_count": 3,
+   "id": "urban-emergency",
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
        "<Figure size 133.526x84.28 with 1 Axes>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -86,8 +86,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "pharmaceutical-pipeline",
+   "execution_count": 4,
+   "id": "occupational-semester",
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
        "<Figure size 133.526x84.28 with 1 Axes>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,8 +126,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "extreme-maximum",
+   "execution_count": 5,
+   "id": "honey-guard",
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
        "<Figure size 297.479x144.48 with 1 Axes>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,8 +149,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "simplified-advance",
+   "execution_count": 6,
+   "id": "negative-stewart",
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +160,7 @@
        "<Figure size 504x360 with 1 Axes>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,8 +174,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "editorial-collector",
+   "execution_count": 7,
+   "id": "proprietary-fancy",
    "metadata": {},
    "outputs": [
     {
@@ -199,8 +199,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "simple-public",
+   "execution_count": 8,
+   "id": "handmade-terrorist",
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
        "<Figure size 504x360 with 1 Axes>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "respective-hurricane",
+   "id": "subject-letters",
    "metadata": {},
    "source": [
     "# Single QuiBit States\n",
@@ -233,8 +233,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "unavailable-national",
+   "execution_count": 9,
+   "id": "employed-postage",
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +244,7 @@
        "<Figure size 288x288 with 1 Axes>"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,8 +262,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "spatial-desire",
+   "execution_count": 10,
+   "id": "heavy-brook",
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +273,7 @@
        "<Figure size 288x288 with 1 Axes>"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "spatial-accreditation",
+   "id": "lesser-implement",
    "metadata": {},
    "source": [
     "# What is a quantum circuit\n",
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "assured-outdoors",
+   "id": "studied-cameroon",
    "metadata": {},
    "source": [
     "A quantum circuit is a computational routine consisting of \n",
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "worst-chicken",
+   "id": "guided-checkout",
    "metadata": {},
    "source": [
     "# The Atoms Of Computation"
@@ -320,8 +320,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "dressed-intensity",
+   "execution_count": 13,
+   "id": "proper-survey",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,14 +331,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "injured-authentication",
+   "execution_count": 14,
+   "id": "freelance-profit",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1263b73a77da459ea2d420c4b2c1f9b1",
+       "model_id": "ae92f04e3bb74e048c4a92e95e8ca4fc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -352,7 +352,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5f34cb15e5544537ba08d5de42ed6732",
+       "model_id": "944fa64aee844293b82d1e174ff7f8db",
        "version_major": 2,
        "version_minor": 0
       },
@@ -371,8 +371,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
-   "id": "korean-springfield",
+   "execution_count": 15,
+   "id": "fuzzy-breeding",
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +382,7 @@
        "<Figure size 568.197x565.88 with 1 Axes>"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -405,8 +405,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
-   "id": "trained-saying",
+   "execution_count": 16,
+   "id": "living-comparative",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,8 +431,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
-   "id": "checked-journal",
+   "execution_count": 17,
+   "id": "stunning-cinema",
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +442,7 @@
        "<Figure size 504x360 with 1 Axes>"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -456,8 +456,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
-   "id": "spread-strength",
+   "execution_count": 18,
+   "id": "excellent-plane",
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +467,7 @@
        "<Figure size 387.597x325.08 with 1 Axes>"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,8 +483,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
-   "id": "apart-unemployment",
+   "execution_count": 19,
+   "id": "binary-welsh",
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +494,7 @@
        "<Figure size 504x360 with 1 Axes>"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -508,8 +508,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
-   "id": "referenced-agreement",
+   "execution_count": 20,
+   "id": "honey-covering",
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +519,7 @@
        "<Figure size 327.397x325.08 with 1 Axes>"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -545,8 +545,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
-   "id": "naughty-rental",
+   "execution_count": 21,
+   "id": "intense-spouse",
    "metadata": {},
    "outputs": [
     {
@@ -556,7 +556,7 @@
        "<Figure size 504x360 with 1 Axes>"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -568,14 +568,115 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "saving-phoenix",
+   "metadata": {},
+   "source": [
+    "Bra-ket notation\n",
+    "\n",
+    "* https://www.cl.cam.ac.uk/teaching/1617/QuantComp/slides2.pdf\n",
+    "\n",
+    "* https://www.cl.cam.ac.uk/teaching/1617/QuantComp/slides4.pdf\n",
+    "    "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "superb-listening",
+   "execution_count": 24,
+   "id": "accomplished-asset",
    "metadata": {},
    "outputs": [],
    "source": [
-    "Next: 4.3 Adding with Qiskit"
+    "# Adding\n",
+    "# 0+0 = 00\n",
+    "# 0+1 = 01\n",
+    "# 1+0 = 01\n",
+    "# 1+1 = 10\n",
+    "\n",
+    "# The rightmost bit in all four of these answers is completely determined by whether \n",
+    "# the two bits we are adding are the same or different.\n",
+    "#   The same  => 0\n",
+    "#   Different => 1\n",
+    "# XOR gate <=> controlled-NOT (CNOT)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cutting-newfoundland",
+   "metadata": {},
+   "source": [
+    "If we have two quibits, we write the state as follows:\n",
+    "\n",
+    "$\\psi = \\psi_1 \\otimes \\psi_2$ \n",
+    "\n",
+    "This can be represented as a 4 dimensional vector.\n",
+    "\n",
+    "The [CNOT gate](https://quantumcomputing.stackexchange.com/questions/5179/how-to-construct-matrix-of-regular-and-flipped-2-qubit-cnot) works on two quibits:\n",
+    "\n",
+    "$$\n",
+    "CNOT = \n",
+    "\\begin{pmatrix}\n",
+    "1 & 0\\\\\n",
+    "0 & 1 \n",
+    "\\end{pmatrix}\n",
+    "\\otimes\n",
+    "\\begin{pmatrix}\n",
+    "0 & 1\\\\\n",
+    "1 & 0 \n",
+    "\\end{pmatrix} = \n",
+    "\\begin{pmatrix}\n",
+    "1 & 0 & 0 & 0 \\\\\n",
+    "0 & 1 & 0 & 0 \\\\\n",
+    "0 & 0 & 0 & 1 \\\\\n",
+    "0 & 0 & 1 & 0 \\\\\n",
+    "\\end{pmatrix}\n",
+    "$$\n",
+    "\n",
+    "Let $\\psi = |0\\rangle \\otimes |0\\rangle$. So, we want $0 + 0$.\n",
+    "\n",
+    "$$\n",
+    "\\begin{pmatrix}\n",
+    "1 & 0\\\\\n",
+    "0 & 1 \n",
+    "\\end{pmatrix}\n",
+    "\\otimes\n",
+    "\\begin{pmatrix}\n",
+    "0 & 1\\\\\n",
+    "1 & 0 \n",
+    "\\end{pmatrix} |0\\rangle \\otimes |0\\rangle = \n",
+    "\\begin{pmatrix}\n",
+    "1 & 0\\\\\n",
+    "0 & 1 \n",
+    "\\end{pmatrix}\n",
+    "\\otimes\n",
+    "\\begin{pmatrix}\n",
+    "0 & 1\\\\\n",
+    "1 & 0 \n",
+    "\\end{pmatrix} \n",
+    "\\begin{pmatrix}\n",
+    "1  \\\\\n",
+    "0  \\\\\n",
+    "1  \\\\\n",
+    "0  \\\\\n",
+    "\\end{pmatrix}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "photographic-harassment",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "prescribed-facing",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -594,7 +695,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
